--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-client": "^1.0.1",
     "react-dom": "^19.0.0",
