--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-client": "^1.0.1",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.3",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "tailwindcss": "^4.0.3"
   }
 }
