changed package.json file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npx parcel index.html",
     "build": "npx parcel build index.html",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
