--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "npx parcel index.html",
-    "build": "npx parcel build index.html",
+    "build": "npx parcel build index.html --public-url ./",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
