--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/postcss": "^4.0.3",
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-client": "^1.0.1",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^4.0.3"
