--- a/.parcelrc.json
+++ b/.parcelrc.json
@@ -1,6 +1,10 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.html": ["@parcel/transformer-html"]
+    "*.html": ["@parcel/transformer-html"],
+    "*.{js,mjs,jsx,cjs,ts,tsx}": [
+      "@parcel/transformer-js",
+      "@parcel/transformer-react-refresh-wrap"
+    ]
   }
 }
