--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "start": "npx parcel index.html --public-url /HungerStrikes",
     "build": "npx parcel build index.html --public-url /HungerStrikes/",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
+    "babel-jest": "^29.7.0",
     "gh-pages": "^6.3.0",
+    "jest": "^29.7.0",
     "parcel": "^2.13.3",
     "process": "^0.11.10"
   },
