--- a/.parcelrc
+++ b/.parcelrc
@@ -1,7 +1,9 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.html": ["@parcel/transformer-html"],
+    "*.html": [
+      "@parcel/transformer-html"
+    ],
     "*.{js,mjs,jsx,cjs,ts,tsx}": [
       "@parcel/transformer-js",
       "@parcel/transformer-react-refresh-wrap"
