--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
+    "@babel/plugin-syntax-jsx": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@parcel/babel-plugin-transform-runtime": "^2.13.3",
+    "@parcel/babel-preset-env": "^2.13.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
